--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  sqflite: 1.3.1
+  intl: ^0.15.7
+  provider: ^3.2.0
+  path_provider: any
+  geolocator: ^5.3.0
+  geocoder: ^0.2.1
+  image_picker: ^0.6.6+1
+  photo_view: ^0.9.2
+  cached_network_image: ^2.2.0+1
+  flutter_luban: ^0.1.11
 
 dev_dependencies:
   flutter_test:
@@ -45,9 +55,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/student.jpeg
+    - assets/images/zigzik.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -60,17 +70,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: rubik-light
+      fonts:
+        - asset: assets/fonts/Rubik-Light.ttf
+    - family: rubik-regular
+      fonts:
+        - asset: assets/fonts/Rubik-Regular.ttf
+    - family: Roboto-regular
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
